# SpottAIr

./: PostureClassifier.ipynb  README.md  labels.json  spottair_model.tflite
.github/workflows/: lint.yml
backend/: .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/api/v1/: agent.py
backend/app/core/: agent.py  schemas.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/public/models/: model.json  spottair_model.h5
frontend/src/: App.jsx  index.css
frontend/src/components/: AnalysisView.tsx  ExerciseDetail.tsx  Layout.tsx  PoseDetector.tsx  TrainingPlan.tsx  WelcomeScreen.tsx
frontend/src/context/: TrainingPlanContext.tsx
frontend/src/data/: training-plan.ts
frontend/src/lib/: audio.ts  spottair.ts
frontend/src/lib/exercises/: feedbackEngine.ts  geometry.ts  registry.ts  squats.ts  types.ts
frontend/src/lib/services/: feedback.ts
